<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/bookmark_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/titleEdit"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/lightGray"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toEndOf="@id/tagText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/btn_rectangle_shape" />

    <TextView
        android:id="@+id/tagText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tag"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tagEdit"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/lightGray"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toEndOf="@id/tagText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleEdit"
        android:background="@drawable/btn_rectangle_shape" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tagText"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_margin="10dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/descriptionEdit"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/lightGray"
        app:layout_constraintStart_toEndOf="@id/descriptionText"
        app:layout_constraintTop_toBottomOf="@id/tagEdit"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/btn_rectangle_shape"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/rateTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionText"
        android:text="STAR"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/addRateBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toStartOf="@id/rateText"
        app:layout_constraintTop_toBottomOf="@id/descriptionEdit"
        android:src="@drawable/rounded_plus"
        android:scaleType="fitCenter"
        android:background="#00ff0000"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/rateText"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="@id/descriptionEdit"
        app:layout_constraintEnd_toEndOf="@id/descriptionEdit"
        app:layout_constraintTop_toBottomOf="@id/descriptionEdit"
        android:text="5"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/btn_rectangle_shape"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/minusRateBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:src="@drawable/minus"
        android:scaleType="fitCenter"
        android:background="#00ff0000"
        app:layout_constraintStart_toEndOf="@id/rateText"
        app:layout_constraintTop_toBottomOf="@id/descriptionEdit"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bookmarkSaveBtn"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/minusRateBtn"
        app:layout_constraintEnd_toEndOf="@id/descriptionEdit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/mainColor"
        android:text="저장"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>