<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white">

        <TextView
            android:id="@+id/titleText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="설정"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/titleText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            app:layout_constraintTop_toBottomOf="@id/titleText1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="기본정보"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/lineImg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/titleText2"
            app:layout_constraintStart_toStartOf="@id/titleText2"
            app:layout_constraintEnd_toEndOf="@id/titleText2"
            android:src="@drawable/line_shape"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/userIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/lineImg"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/id_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/userId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/lineImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/userIdText"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/nickText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/userIdText"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/nickname_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/nickEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/userId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nickText"
            android:background="@drawable/btn_rectangle_shape"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/msgText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            app:layout_constraintTop_toBottomOf="@id/nickEditText"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/message_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/msgEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/msgText"
            app:layout_constraintStart_toStartOf="@id/msgText"
            app:layout_constraintEnd_toEndOf="@id/nickEditText"
            android:background="@drawable/btn_rectangle_shape"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/infoModifyOkBtn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/msgEditText"
            app:layout_constraintEnd_toEndOf="@id/msgEditText"
            android:backgroundTint="@color/mainColor"
            android:text="@string/modify_title"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/titleText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            app:layout_constraintTop_toBottomOf="@id/infoModifyOkBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="비밀번호 변경"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/lineImg3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/titleText4"
            app:layout_constraintStart_toStartOf="@id/titleText2"
            app:layout_constraintEnd_toEndOf="@id/titleText2"
            android:src="@drawable/line_shape"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/pwt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            app:layout_constraintTop_toBottomOf="@id/lineImg3"
            app:layout_constraintStart_toStartOf="parent"
            android:text="비밀번호"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/oldPwEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            app:layout_constraintTop_toBottomOf="@id/lineImg3"
            app:layout_constraintStart_toEndOf="@id/pwt3"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:background="@drawable/btn_rectangle_shape"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/pwt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            app:layout_constraintTop_toBottomOf="@id/pwt"
            app:layout_constraintStart_toStartOf="parent"
            android:text="새 비밀번호"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/newPwEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            app:layout_constraintTop_toBottomOf="@id/oldPwEdit"
            app:layout_constraintStart_toEndOf="@id/pwt3"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/btn_rectangle_shape"
            android:textSize="15sp"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/pwt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            app:layout_constraintTop_toBottomOf="@id/pwt2"
            app:layout_constraintStart_toStartOf="parent"
            android:text="새 비밀번호 확인"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/newPwCheckEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            app:layout_constraintTop_toBottomOf="@id/newPwEdit"
            app:layout_constraintStart_toEndOf="@id/pwt3"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/btn_rectangle_shape"
            android:textSize="15sp"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/pwChangeOkBtn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/newPwCheckEdit"
            app:layout_constraintEnd_toEndOf="@id/newPwCheckEdit"
            android:backgroundTint="@color/mainColor"
            android:text="@string/modify_title"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/titleText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/pwChangeOkBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="보기"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/lineImg2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/titleText3"
            app:layout_constraintStart_toStartOf="@id/titleText2"
            app:layout_constraintEnd_toEndOf="@id/titleText2"
            android:src="@drawable/line_shape"
            tools:ignore="MissingConstraints" />

        <!-- 초기 북마크 출력방식 설정 -->
        <TextView
            android:id="@+id/bm_viewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            app:layout_constraintTop_toTopOf="@id/radioGroup"
            app:layout_constraintBottom_toBottomOf="@id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/bookmark_view"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/lineImg2"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/listCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="리스트형"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/gridCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="바둑형"
                android:textColor="@color/black"/>
        </RadioGroup>

        <TextView
            android:id="@+id/state_tagText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toTopOf="@id/radioGroup2"
            app:layout_constraintBottom_toBottomOf="@id/radioGroup2"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/hashtag"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/visibleCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="숨기기"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/invisibleCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="보이기"
                android:textColor="@color/black"/>
        </RadioGroup>

        <TextView
            android:id="@+id/categorized_tagText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toTopOf="@id/radioGroup3"
            app:layout_constraintBottom_toBottomOf="@id/radioGroup3"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/categorized_hashtags"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup2"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/activeCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="활성화"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints"/>

            <RadioButton
                android:id="@+id/inActiveCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="비활성화"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints"/>
        </RadioGroup>


        <Button
            android:id="@+id/viewSettingOkBtn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/radioGroup3"
            app:layout_constraintEnd_toEndOf="@id/lineImg2"
            android:backgroundTint="@color/mainColor"
            android:text="@string/modify_title"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
